--- a/css/style.css
+++ b/css/style.css
@@ -29,5 +29,72 @@ li.profile-1 a {
     margin-left: 26px;
     font-weight: 600;
     font-size: 1rem;
-    color: #655bff !important;
+    color: #675cff !important;
+}
+
+li.menu-items a {
+    font-size: 1.1rem;
+    font-weight: 700;
+    color: #767676;
+}
+
+.main-body {
+    background-color: #f8f9fa;
+}
+
+.item-text {
+    background: #fff;
+    border-radius: 14px;
+}
+
+.sort-text p {
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-top: 5px;
+    margin-right: 15px;
+}
+
+.btn-secondary {
+    --bs-btn-color: #979797;
+    --bs-btn-bg: #ffffff;
+    --bs-btn-border-color: #ffffff;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #5c636a;
+    --bs-btn-hover-border-color: #565e64;
+    --bs-btn-focus-shadow-rgb: 130, 138, 145;
+    --bs-btn-active-color: #ffffff;
+    --bs-btn-active-bg: #376d97;
+    --bs-btn-active-border-color: #51585e;
+    --bs-btn-active-shadow: inset 0 3px 5pxrgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #6c757d;
+    --bs-btn-disabled-border-color: #6c757d;
+}
+
+.sort-btn-1 {
+    margin-right: 22px;
+}
+
+.pick {
+    background: #675cff;
+    border: #675cff;
+    font-size: 1.2rem;
+}
+
+.pick:hover {
+    background: #fff;
+    color: #675cff;
+    border: #675cff;
+}
+
+.trending {
+    border-color: #675cff;
+    font-size: 1.2rem;
+    color: #675cff;
+}
+
+.trending:hover {
+    background: #675cff;
+    border: #675cff;
+    font-size: 1.2rem;
 }
