--- a/css/style.css
+++ b/css/style.css
@@ -144,3 +144,9 @@ section.faq {
 .accordion {
     margin-top: 80px;
 }
+
+.accordion-button:not(.collapsed) {
+    color: #ffffff;
+    background-color: #8d79fb;
+    box-shadow: inset 0 calc(var(--bs-accordion-border-width) * -1) 0 var(--bs-accordion-border-color);
+}
