--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@ a.navbar-brand {
     display: inline-block;
 }
 
+.active1>a {
+    display: inline-block;
+    background: #8d79fb;
+    color: #fff !important;
+}
+
 span.logo {
     background: #8d79fb;
     padding: 10px 25px;
@@ -136,6 +142,18 @@ footer h5 {
     display: inline-block;
 }
 
+.news:focus {
+    color: rgb(255 255 255);
+    background: #8d79fb;
+    display: inline-block;
+}
+
+.blog:focus {
+    color: rgb(255 255 255);
+    background: #8d79fb;
+    display: inline-block;
+}
+
 section.faq {
     height: 75vh;
 }
@@ -149,4 +167,9 @@ section.faq {
     color: #ffffff;
     background-color: #8d79fb;
     box-shadow: inset 0 calc(var(--bs-accordion-border-width) * -1) 0 var(--bs-accordion-border-color);
+}
+
+.click-details button {
+    border: none;
+    background: transparent;
 }
